--- a/MVC-Exam-Questions/Views/QuestionView.xib
+++ b/MVC-Exam-Questions/Views/QuestionView.xib
@@ -20,7 +20,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aMH-Zk-RJO">
-                    <rect key="frame" x="39" y="412" width="42" height="21"/>
+                    <rect key="frame" x="39" y="94" width="42" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
@@ -29,8 +29,8 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="linkColor"/>
             <constraints>
+                <constraint firstItem="aMH-Zk-RJO" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="50" id="E5I-oY-RhG"/>
                 <constraint firstItem="aMH-Zk-RJO" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="39" id="J0z-ub-7WP"/>
-                <constraint firstItem="aMH-Zk-RJO" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="368" id="KoW-xu-2Gh"/>
             </constraints>
             <point key="canvasLocation" x="139" y="114"/>
         </view>
